...
                right: 40,
                width: width * 170 / 375,
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.end,
                  children: [
                    UnderlineTextField(
                      key: ValueKey('confirmPasswordField'),
                      controller: _passwordController,
                      obscureText: true,
                      moveFocus: false,
                      onEditingComplete: () => FocusScope.of(context).unfocus(),
                    ),
                    SizedBox(height: 100),
                    FlatTileButton(
                      key: ValueKey('confirmDeleteAccountBtn'),
                      text: 'Delete account',
                      color: MyPalette.red,
                      onTap: _deleteAccount,
                    ),
                  ],
                ),
...
