...
          Padding(
            padding: EdgeInsets.symmetric(vertical: 20.0),
            child: Row(
              mainAxisAlignment: MainAxisAlignment.spaceEvenly,
              children: <Widget>[
                SimpleIconButton(
                  key: ValueKey('settingsBtn'),
                  icon: Icons.settings,
                  size: 34,
                  label: 'Settings',
                  onPressed: _openSettings,
                ),
                SimpleIconButton(
...
    final source = await showDialog(
      context: context,
      child: SimpleDialog(
        title: Text('Change profile picture'),
        children: <Widget>[
          FlatButton(
            child: Text('Camera'),
            onPressed: () => Navigator.pop(context, ImageSource.camera),
          ),
          FlatButton(
            child: Text('Gallery'),
            onPressed: () => Navigator.pop(context, ImageSource.gallery),
          ),
...
