...
                ),
              ),
              SizedBox(height: 20),
              SettingField(
                title: 'Gender',
                child: RoundRadioGroup(
                  options: ['Male', 'Female'],
                  selected: Gender.values.indexOf(profile.gender),
                  onChanged: (option) =>
                      Provider.of<User>(context, listen: false)
                          .updateProfile({'gender': option}),
                ),
              ),
...
                    ],
                  ),
                ),
                onPressed: _confirmLogout,
              ),
              FlatButton(
                key: ValueKey('deleteAccountBtn'),
                child: Padding(
                  padding: EdgeInsets.symmetric(vertical: 14),
                  child: Row(
                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                    children: <Widget>[
                      Text(
...
