...
                ),
              ),
              Positioned(
                top: height * 630 / 812,
                right: 0,
                child: GestureDetector(
                  key: ValueKey('registerBtn'),
                  child: AnimatedContainer(
                    duration: const Duration(milliseconds: 200),
                    width: width * 132 / 375,
                    height: height * 38 / 812,
                    color: MyPalette.gold,
                    padding: const EdgeInsets.only(bottom: 5, right: 10),
...
