...
      appBar: AppBar(
        leading: TileIconButton(
          icon: Icons.arrow_back,
          onPressed: () => Navigator.pop(context),
        ),
        title: Text(
          "Settings",
          style: Theme.of(context).textTheme.headline6,
        ),
        backgroundColor: Colors.transparent,
        elevation: 0.0,
      ),
      body: SingleChildScrollView(
...
                      "ageRangeMin": newRangeValues.start.toInt(),
                      "ageRangeMax": newRangeValues.end.toInt(),
                    }),
                  )),
              SizedBox(height: 20.0),
              SeparatePageSettingField(
                title: "Filters",
                onNextPage: _openFilterSettings,
              ),
              SizedBox(height: 20.0),
              SeparatePageSettingField(
                title: "Blocked users",
                onNextPage: _openBlockedUsers,
...
