...
            indicatorWeight: 3,
            indicatorColor: MyPalette.gold,
            labelColor: MyPalette.gold,
            unselectedLabelColor: Theme.of(context).colorScheme.onPrimary,
            tabs: <Tab>[
              Tab(
                key: ValueKey('meTab'),
                child: const Icon(Icons.person),
              ),
              Tab(
                key: ValueKey('mostPopularTab'),
                child: MyFeature(
                  key: ValueKey('mostPopularFeature'),
...
